k8s/prefect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  namespace: prefect
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: https://id.basedosdados.org/auth/
    nginx.ingress.kubernetes.io/auth-signin: https://id.basedosdados.org/auth/login/?rd=https://$host$request_uri$is_args$args
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - prefect.basedosdados.org
    secretName: prefect-tls
  rules:
  - host: prefect.basedosdados.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prefect-ui
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: prefect-apollo
            port:
              number: 4200
